fixed the link of question 6

--- a/index.html
+++ b/index.html
@@ -327,8 +327,7 @@
             },
             {
                 id: 6,
-                // Note: This link is the same video ID as Q5: VCWpjsBznfg
-                videoId: extractVideoId("https://youtu.be/VCWpjsBznfg?si=1Ocb-09wpINHePM6"),
+                videoId: extractVideoId("https://youtu.be/X_GLhrk5vBY?si=WT2Fmdc5Zf8zXJ2q"),
                 question: "But they're____________. Even the humble ____________has a place...",
                 options: [
                     { text: "A. Slay", correct: false },
